# template-python-package

./: .copier-answers.yml  .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _contributors.qmd  _metadata.yml  _publish.yml  _quarto.yml  copier.yaml  index.qmd  justfile  pyproject.toml  test-template.sh
.config/: cliff.toml  cog.toml  rumdl.toml  typos.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  sync.yml
.github/workflows/: add-to-project.yml  build-package.yml  build-website.yml  checks.yml  deploy-demo.yml  release-package.yml  release-project.yml  release.yml  sync-files.yml  test.yml
_extensions/seedcase-project/seedcase-theme/: _brand.yml  _extension.yml
docs/: guide.qmd
docs/guide/: index.qmd  installing.qmd  next-steps.qmd  updating.qmd  using.qmd
docs/includes/: _badges.qmd  _contributors.qmd  site-counter.html
template/: .editorconfig  .pre-commit-config.yaml  404.qmd.jinja  CHANGELOG.md  CITATION.cff.jinja  CONTRIBUTING.md.jinja  LICENSE.md.jinja  README.md  README.md.jinja  README.qmd  README.qmd.jinja  TODO.md  _metadata.yml.jinja  _publish.yml  _quarto.yml.jinja  index.qmd.jinja  justfile  justfile.jinja  pyproject.toml.jinja  {% if hosting_provider == 'netlify' %}_publish.yml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/.config/: cliff.toml  cog.toml  typos.toml
template/.github/: CODEOWNERS.jinja  dependabot.yml  dependabot.yml.jinja
template/.github/workflows/: add-to-project.yml  add-to-project.yml.jinja  build-website.yml  build-website.yml.jinja  checks.yml  release.yml  scorecards.yml  update-from-template.yml
template/docs/: LICENSE.md  site-counter.html.jinja  {% if seedcase_project %}site-counter.html{% endif %}.jinja
template/docs/includes/: _badges.qmd
