[project]
name = "template-python-package"
version = "0.1.0"
description = "Template Python Package"
authors = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
maintainers = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = []

# TODO: Update these
[project.urls]
homepage = "https://PROJECT.seedcase-project.org"
repository = "https://github.com/seedcase-project/REPO"
changelog = "https://github.com/seedcase-project/REPO/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/REPO/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
  # A short traceback mode to make it easier to view
  "--tb=short",
  # Use the `src/` package
  "--import-mode=importlib",
]
